test: add one unit tests. Add little changes on classes.